@@ -1,3 +1,4 @@
+Build.PL
 ChangeLog
 examples/example.pl
 examples/next-in-loop/Error.pm-eval.pl
@@ -6,6 +7,7 @@ examples/next-in-loop/Error.pm-next-out-of-catch.pl
 examples/next-in-loop/Error.pm-next.pl
 examples/next-in-loop/README
 examples/warndie.pl
+inc/Test/Run/Builder.pm
 lib/Error.pm
 lib/Error/Simple.pm
 Makefile.PL
